/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.client.api;

import "src/devtools/mobileharness/infra/client/api/proto/server_locator.proto";

option java_package = "com.google.devtools.mobileharness.infra.client.api.proto";
option java_outer_classname = "ResourceFederationProto";

// ResourceFederation is a collection of external resources needed by a job.
message ResourceFederation {
  // The server resource types should not be duplicated.
  repeated ServerResource server_resources = 1;
}

message ServerResource {
  ServerResourceType server_resource_type = 1;
  ServerLocator server_locator = 2;
}

enum ServerResourceType {
  SERVER_RESOURCE_TYPE_UNSPECIFIED = 0;
  MASTER = 1;
  reserved 2, 3;
  GRPC_RELAY = 4;
}
